--- a/html/CSS/Header_Footer.css
+++ b/html/CSS/Header_Footer.css
@@ -12,16 +12,25 @@
 
 			}
 			header {
+				padding: 0;
 				z-index: 2;
-				padding-top: .2em;
-				padding-bottom: .2em;
 				position: fixed;
-				background-color: #1976D2;
-				display: inline-block;	
+				background-image: url(../images/background.jpg);
+				background-position: 50% 0px;
+				display: inline-block;
 				width: 100%;
 				box-shadow:  0px 4px 6px 2px rgba(0, 0, 0, .5);
 			} 
 
+			#header_overlay {
+				margin: 0;
+				z-index: 3;
+				padding-top: .2em;
+				display: inline-block;
+				padding-bottom: .2em;
+				width: 100%;
+				background-color: rgba(25, 118, 210, .8);
+			}
 			#leftSide {
 				display: inline-block;
 				padding-left: 2%;
